Increase permgen for maven in ci build.